Fix overflow scrolling in iOS Safari

--- a/css/index.styl
+++ b/css/index.styl
@@ -11,6 +11,9 @@
 // CSS reset
 
 *
+  // Fix overflow elements not scrolling properly in Safari
+  -webkit-overflow-scrolling touch
+
   margin     0
   padding    0
   box-sizing border-box
